put commands of git for cmd

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     this is html file
+
+    git clone url  "this is used to link github with local pc "
+    git status     "it is used to check status that the files are in which state commit, ready or modifiled"
+
+    git add filename     "used for ading that file running state "
+    git add .           "used for adding all files in running state"
+    git commit -m "message" "it is used to upload your changes to github account"
 </body>
 </html>
