--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     git add filename     "used for ading that file running state "
     git add .           "used for adding all files in running state"
-    git commit -m "message" "it is used to upload your changes to github account"
+    git commit -m "message" "it is used to commit your changes to your local account"
+    git push origin main   "is used to upload changes"
 </body>
 </html>
